--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Max-margin classifier
 
-This is a document that answers the questions in the.
+This is a document that answers the questions in the assignment.
 
 Question 1:
 
