--- a/duality_formulation.tex
+++ b/duality_formulation.tex
@@ -12,6 +12,10 @@
 \tableofcontents
 
 \begin{abstract}
+In this fake-paper I write a short mathematical explenation
+of how to formulate the Max-Margin classifier in it's dual form.
+I go through it step by step.
+
 \end{abstract}
 
 \section{}
