Added first time using latex footnote

--- a/duality_formulation.tex
+++ b/duality_formulation.tex
@@ -3,7 +3,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{lmodern}
 
-\title{Duality Forumlation of Max-Margin Classifier} 
+\title{Duality Forumlation of Max-Margin Classifier\footnote{This is the first time I use latex}} 
 \author{Arash Rouhani}
 
 \begin{document}
@@ -13,10 +13,10 @@
 \begin{abstract}
 In this fake-paper I write a short mathematical explenation
 of how to formulate the Max-Margin classifier in it's dual form.
-I go through it step by step.
+I go through it step by step. 
 
 \end{abstract}
 
-\section{}
-
+\section{Proof}
+blah blah
 \end{document}
