--- a/duality_formulation.tex
+++ b/duality_formulation.tex
@@ -17,6 +17,12 @@ I go through it step by step.
 
 \end{abstract}
 
-\section{Proof}
-blah blah
+\section{Primal formulation}
+To be written ...
+\section{Lagrangian function}
+There will be as always 3 kinds of terms, coming from either the \textit{the objective function},\textit{a constraint} or \textit{a variable constraint}.
+\begin{equation}
+L(w, b, \xi, \lambda, \mu) = \frac{1}{2} ||w||^{2}_{2} + \sum\limits_{i=1}^n {C\xi_i}
+\end{equation}
+
 \end{document}
