--- a/duality_formulation.tex
+++ b/duality_formulation.tex
@@ -28,4 +28,8 @@ Can simply be rewritten to
 \begin{equation}
 L(w, b, \xi, \mu, \nu) = \frac{1}{2} ||w||^2_2 + \sum\limits_{i=1}^n {C\xi_i + \mu_iy_i(b + 1 - w^Tx_i - \xi_i) - \nu_i\xi_i}
 \end{equation}
+We now derivativs for each variable-type and get an equation. There are 3 'types' of variables here, so we will get 3 equations.
+\subsection{Derivative with respect to w}
+\subsection{Derivative with respect to b}
+\subsection{Derivative with respect to $\xi$}
 \end{document}
