Fixed mathematical error

--- a/duality_formulation.tex
+++ b/duality_formulation.tex
@@ -26,7 +26,7 @@ There will be as always 3 kinds of terms, coming from either the \textit{the obj
 % \end{equation}
 % Can simply be rewritten to
 \begin{equation}
-L(w, b, \xi, \mu, \nu) = \frac{1}{2} ||w||^2_2 + \sum\limits_{i=1}^n {C\xi_i + \mu_iy_i(b + 1 - w^Tx_i - \xi_i) - \nu_i\xi_i}
+L(w, b, \xi, \mu, \nu) = \frac{1}{2} ||w||^2_2 + \sum\limits_{i=1}^n {C\xi_i + \mu_i(y_ib + 1 - y_iw^Tx_i - \xi_i) - \nu_i\xi_i}
 \end{equation}
 We now derivativs for each variable-type and get an equation. There are 3 'types' of variables here, so we will get 3 equations.
 
