Changed y to nu. Was wrong before

--- a/duality_formulation.tex
+++ b/duality_formulation.tex
@@ -41,7 +41,7 @@ We now derivativs for each variable-type and get an equation. There are 3 'types
   \end{equation}
 \subsection{Derivative with respect to $\xi$}
   \begin{equation}
-    \frac{dL}{db} = 0 = C - \mu_i - y_i
+    \frac{dL}{db} = 0 = C - \mu_i - \nu_i
   \end{equation}
 
 \section{Refining the lagrangian by substitution}
