--- a/duality_formulation.tex
+++ b/duality_formulation.tex
@@ -44,7 +44,7 @@ We now derivativs for each variable-type and get an equation. There are 3 'types
     \frac{dL}{db} = 0 = C - \mu_i - \nu_i
   \end{equation}
 
-\section{Refining the lagrangian by substitution}
+\section{Reducing the lagrangian by substitution}
 First we substitute (4) which is clearly eliminating the $\xi$ terms.
 \begin{equation}
   L(w, b, \mu, \nu) = \frac{1}{2} ||w||^2_2 + \sum\limits_{i=1}^n {\mu_i(y_ib + 1 - y_iw^Tx_i)}
