--- a/duality_formulation.tex
+++ b/duality_formulation.tex
@@ -47,10 +47,10 @@ We now derivativs for each variable-type and get an equation. There are 3 'types
 \section{Reducing the lagrangian by substitution}
 First we substitute (4) which is clearly eliminating the $\xi$ terms.
 \begin{equation}
-  L(w, b, \mu, \nu) = \frac{1}{2} ||w||^2_2 + \sum\limits_{i=1}^n {\mu_i(y_ib + 1 - y_iw^Tx_i)}
+  L(w, b, \mu) = \frac{1}{2} ||w||^2_2 + \sum\limits_{i=1}^n {\mu_i(y_ib + 1 - y_iw^Tx_i)}
 \end{equation}
 Let's rewrite the function using $ ||w||^2_2 = w^Tw $
 \begin{equation}
-  L(w, b, \mu, \nu) = \frac{1}{2} w^T(w - \sum\limits_{i=1}^n {\mu_iy_ix_i})  + \sum\limits_{i=1}^n {\mu_i(y_ib + 1)}
+  L(w, b, \mu) = \frac{1}{2} w^T(w - \sum\limits_{i=1}^n {\mu_iy_ix_i})  + \sum\limits_{i=1}^n {\mu_i(y_ib + 1)}
 \end{equation}
 \end{document}
