Fixed mathematical error, 1div2 was at wrong place.

--- a/duality_formulation.tex
+++ b/duality_formulation.tex
@@ -51,6 +51,6 @@ First we substitute (4) which is clearly eliminating the $\xi$ terms.
 \end{equation}
 Let's rewrite the function using $ ||w||^2_2 = w^Tw $
 \begin{equation}
-  L(w, b, \mu) = \frac{1}{2} w^T(w - \sum\limits_{i=1}^n {\mu_iy_ix_i})  + \sum\limits_{i=1}^n {\mu_i(y_ib + 1)}
+  L(w, b, \mu) = w^T(\frac{1}{2}w - \sum\limits_{i=1}^n {\mu_iy_ix_i})  + \sum\limits_{i=1}^n {\mu_i(y_ib + 1)}
 \end{equation}
 \end{document}
