removed errenous statement

--- a/duality_formulation.tex
+++ b/duality_formulation.tex
@@ -34,7 +34,7 @@ We now derivativs for each variable-type and get an equation. There are 3 'types
   \begin{equation}
     \frac{dL}{dw} = 0 = w - \sum\limits_{i=1}^n {\mu_i y_i x_i}
   \end{equation}
-  Here $x_i$ means the sum of the values in the \textbf{vector} $x_i$.
+% WRONG - %  Here $x_i$ means the sum of the values in the \textbf{vector} $x_i$.
 \subsection{Derivative with respect to b}
   \begin{equation}
     \frac{dL}{db} = 0 = \sum\limits_{i=1}^n {\mu_i y_i}
