Boldfontet 0 which was for vector

--- a/duality_formulation.tex
+++ b/duality_formulation.tex
@@ -32,7 +32,7 @@ We now derivativs for each variable-type and get an equation. There are 3 'types
 
 \subsection{Derivative with respect to w}
   \begin{equation}
-    \frac{dL}{dw} = 0 = w - \sum\limits_{i=1}^n {\mu_i y_i x_i}
+    \frac{dL}{dw} = \textbf{0} = w - \sum\limits_{i=1}^n {\mu_i y_i x_i}
   \end{equation}
 % WRONG - %  Here $x_i$ means the sum of the values in the \textbf{vector} $x_i$.
 \subsection{Derivative with respect to b}
