--- a/duality_formulation.tex
+++ b/duality_formulation.tex
@@ -11,9 +11,10 @@
 \maketitle
 
 \begin{abstract}
-In this fake-paper I write a short mathematical explenation
-of how to formulate the Max-Margin classifier in it's dual form.
-I go through it step by step. 
+This paper presents a short mathematical explenation of how to formulate
+the Max-Margin Classifier problem in it's dual form.
+I go through the derivation step by step by formulating the lagrangian
+function and then performing sensible steps finally reach the desired dual formulation. 
 
 \end{abstract}
 
@@ -69,12 +70,17 @@ Now we finally rewrite the lagrangian to it's well-recognized form.
 So far we've only retrieved the objective function out of the Lagrangian, but what about the constraints?
 Firstly we must notice that we've always known that $ \mu,\nu > 0 $
 as dual variables always have that property (otherwise it wouldn't be
-penalty to actually violate the constraints).
-The rest of the information we are going to work with is the equalities we got after the derivations in chapter 2.
+penalty to violate the constraints).
+The rest of the information we are going to work with is the equalities
+we got after the derivations in the previous chapter.
 
 
 The first constraint we take is simply equation (3). The second constraint I claim is
-$$ 0 \le \mu_i \le C \forall 1 \le i \le n$$ 
+$$ 0 \le \mu_i \le C $$
+$$ 1 \le     i \le n $$ 
+
+$\mu_i \ge 0$ Holds by definition. $C \ge \mu_i$ since we can freely choose $\nu \ge 0$.
+By regulating \nu in $\mu_i = C - \nu_i$ it becomes clear that we get the constraint claimed above.
 
 
 \end{document}
