--- a/duality_formulation.tex
+++ b/duality_formulation.tex
@@ -67,20 +67,20 @@ Now we finally rewrite the lagrangian to it's well-recognized form.
   L(\mu) = \sum\limits_{i=1}^n {\mu_i} - \frac{1}{2} \sum\limits_{i=1}^n \sum\limits_{j=1}^n{\mu_i\mu_jy_iy_jx_i^Tx_j}
 \end{equation}
 \section{Finding the constraints}
-So far we've only retrieved the objective function out of the Lagrangian, but what about the constraints?
-Firstly we must notice that we've always known that $ \mu,\nu > 0 $
-as dual variables always have that property (otherwise it wouldn't be
-penalty to violate the constraints).
+So far we've only retrieved the objective function out of the Lagrangian, now the constraints remain.
+Firstly we must notice that we've always known that $ \mu,\nu > 0 $,
+dual variables are always $\ge 0$ (otherwise it would be
+a \textit{gain} to violate the constraints).
 The rest of the information we are going to work with is the equalities
-we got after the derivations in the previous chapter.
+we got after the derivations in chapter 2.
 
 
 The first constraint we take is simply equation (3). The second constraint I claim is
 $$ 0 \le \mu_i \le C $$
 $$ 1 \le     i \le n $$ 
 
-$\mu_i \ge 0$ Holds by definition. $C \ge \mu_i$ since we can freely choose $\nu \ge 0$.
-By regulating \nu in $\mu_i = C - \nu_i$ it becomes clear that we get the constraint claimed above.
+$\mu_i \ge 0$ Holds by definition. $C \ge \mu_i$ holds as of (4) by regulating $\nu \ge 0$
+in $\mu_i = C - \nu_i$. It's clear that we get the constraint claimed above.
 
 
 \end{document}
