--- a/duality_formulation.tex
+++ b/duality_formulation.tex
@@ -4,7 +4,7 @@
 \usepackage{lmodern}
 \usepackage{hyperref}
 
-\title{Duality Forumlation of Max-Margin Classifier
+\title{Duality Forumlation of Max-Margin Classifier}
 \author{Arash Rouhani}
 
 \begin{document}
