--- a/duality_formulation.tex
+++ b/duality_formulation.tex
@@ -13,7 +13,7 @@
 
 \begin{abstract}
 This paper presents a short mathematical explenation of how to formulate
-the Max-Margin Classifier problem in it's dual form.
+the Max-Margin Classifier problem in its dual form.
 I go through the derivation step by step by formulating the lagrangian
 function and then performing sensible steps to finally reach the desired dual formulation. 
 
