--- a/duality_formulation.tex
+++ b/duality_formulation.tex
@@ -59,7 +59,7 @@ Now we use (2) and (3) in order to reduce once more.
 \begin{equation}
   L(w, \mu) = \sum\limits_{i=1}^n {\mu_i} - \frac{1}{2} w^T \sum\limits_{i=1}^n{\mu_iy_ix_i} 
 \end{equation}
-Now we use (2) again to rewrite $w^T$, finally eliminating all free varaibles we had in the primal.
+Now we use (2) again to rewrite $w^T$, finally eliminating all free variables we had in the primal.
 \begin{equation}
   L(\mu) = \sum\limits_{i=1}^n {\mu_i} - \frac{1}{2} \sum\limits_{j=1}^n{\mu_jy_jx_j^T} \sum\limits_{i=1}^n{\mu_iy_ix_i} 
 \end{equation}
